[tool.poetry]
name = "recogne"
version = "0.1.0"
description = "An RCON server for Hell Let Loose, with bells."
authors = ["Rich Tebb <rich@tebb.io>"]
license = "ISC"
readme = "README.md"
packages = [
    { include = "recogne" },
]
keywords = ["hell-let-loose", "rcon"]
homepage = "https://github.com/bwcc-clan/recogne"

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"
python-dotenv = "^1.0.1"
json-stream = "^2.3.2"
attrs = "^23.2.0"
cattrs = "^23.2.3"
requests = "^2.31.0"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlmodel = "^0.0.16"
anyio = "^4.3.0"
httpx = "^0.27.0"
aiohttp = "^3.9.4"
pypika = "^0.48.9"
discord-py = "^2.3.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
pyright = "^1.1.356"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.pyright]
exclude = ["**/node_modules",
    "**/__pycache__",
    "typestubs"
]
defineConstant = { DEBUG = true }
stubPath = "stubs"

reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownVariableType = false

pythonVersion = "3.12"
pythonPlatform = "Linux"


[tool.ruff]
line-length = 88
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
